# MP7_AIVLE-Crawler

./: .gitignore  README.md  main.py  pyproject.toml
crawler/: aivle_crawler.py  base_crawler.py  blog_crawler.py  config.py  google_crawler.py
documents/: faq_20240604_1128.csv  faq_data_success.csv  search_20240604_1408.csv  search_20240604_1411.csv  search_20240604_1423.csv
